<resources>
    <string name="app_name">BarberMe</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="error_message">An Error Occurred</string>
    <string name="reset_password_email">Reset Password Email Sent</string>
    <string name="empty_textboxes">Not Everything Is Filled</string>
    <string name="upload_data_error">Error While Uploading Data</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="login">Login</string>
    <string name="signup">Create New Account</string>
    <string name="guest_login">Continue As Guest</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="reviews">Reviews:</string>
    <string name="notif_title">Welcome To Your Barber House</string>
    <string name="upload_title">Uploading...</string>
    <string name="upload_message">A New Post Is Being Uploaded</string>
    <string name="double_post">A New Post is Already Being Uploaded</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="select_picture">Select Picture</string>
    <string name="permission">Please Accept Permissions For That Request</string>
    <string name="pictures_count">Pictures Count:</string>
    <string name="new_review">New Review Has Been Published</string>
    <string name="update_successful">Update Successful</string>
    <string name="update_failed">Update Failed</string>
    <string name="guest">Guest</string>
    <string name="welcome">Welcome</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_picture">Choose Picture From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="upload_pictures_title">Choose Your Barber Shop Pictures</string>
    <string name="guest_error">You Must Login To Use This Function</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are You Sure You Want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="barber_remove">Barber Shop Removed!</string>
    <string name="signin_successful">Sign In Successful</string>
    <string name="signin_failed">Sign In Failed</string>
    <string name="empty_texts">Please Fill All The Text Boxes</string>
    <string name="signup_successful">Sign Up Successful</string>
    <string name="signup_failed">Sign Up Failed</string>
    <string name="equal_passwords_empty_boxes">Please Fill All The Text Boxes And Make Sure Passwords Are Equal</string>
    <string name="submit">Submit</string>
    <string name="add_review">Add Review</string>
    <string name="review_hint">Please Enter Your Review Text Here</string>
    <string name="barbershop_name">Barber Shop Title</string>
    <string name="barbershop_subtitle">Baber Shop Subtitle</string>
    <string name="search">Search</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="website">Website</string>
    <string name="add_barber_shop">Add Barber Shop</string>
    <string name="push_new_review">A New Review Added</string>
    <string name="post">Post</string>
    <string name="edit_barber">Edit</string>
    <string name="barbershop_type">Barber Shop Type</string>
    <string name="atleast_one_picture">You must add at least one picture</string>
    <string name="account_deleted">Account Deleted !</string>
    <string name="profile_picture_chaneged">Profile Picture Changed !</string>
    <string name="new_password">New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="delete_account_question">Are you sure you wish to delete your account?</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="my_account">My Account</string>
    <string name="update_info">Update your basic info, email and password</string>
    <string name="change_profile_picture_text">Change your profile picture</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="norifications_pref">Recieve notifications about new reviews</string>
    <string name="all_barber_shops">All Barber Shops</string>
    <string name="my_barber_shops">My Barber Shops</string>
    <string name="personal_submenu">Personal Submenu</string>
    <string name="settings_submenu">Settings Submenu</string>
    <string name="settings">Settings</string>
    <string name="basic_Information">Basic Information</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="account_settings">Account Settings</string>
    <string name="notifications">Notifications</string>
    <string name="edit_my_barberss">Edit My Barber\'s</string>
    <string name="add">Add</string>
    <string name="distance">KM</string>
</resources>