<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/all_barbershops"
            android:checked="true"
            android:title="@string/all_barber_shops"/>
    </group>

    <item android:title="@string/personal_submenu"
        >

        <menu>
            <item android:id="@+id/my_barbershops"
                android:title="@string/my_barber_shops"/>
        </menu>
    </item>

    <item android:title="@string/settings_submenu">
        <menu>
            <item android:id="@+id/settings"
                android:title="@string/settings"/>
            <item android:id="@+id/Logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>