<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:background="@drawable/shape_selector_white_stroke"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/YellowApp"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_message"
        android:textColor="@color/White"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/logout_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/assistant_regular"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/shape_selector_yellowapp"
            android:textColor="@color/Black"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancel_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/assistant_regular"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/shape_selector_yellowapp"
            android:textColor="@color/Black"
            android:text="@string/cancel" />

    </LinearLayout>


</LinearLayout>
