<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/barber_shop_activity_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_barber_shop_activity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/shape_selector_tarsient_without_stroke"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:contentScrim="@color/barColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/barbershop_activity_image_view"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                app:civ_border_color="@color/YellowDark"
                app:civ_border_width="2dp"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_below="@+id/barbershop_activity_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/barbershop_name_activity_barber_shop"
                android:textStyle="bold"
                android:textColor="@color/White"
                android:text="@string/barbershop_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type_barbershop_activity_barber_shop"
                android:layout_below="@id/barbershop_name_activity_barber_shop"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/White"
                android:text="@string/barbershop_subtitle"/>

        </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_collapseMode="pin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ancor_to_me"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/recycler_show_barber_pictures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/top_bottom"
                android:layoutDirection="ltr" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/White"
                    android:layout_centerVertical="true"
                    android:textSize="25dp"/>

                <Button
                    android:id="@+id/add_review_bt"
                    android:layout_width="wrap_content"
                    android:textColor="@color/White"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/shape_selector_white_stroke"
                    android:text="@string/add_review" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/top_bottom"
                android:orientation="vertical"
                android:id="@+id/new_review_layout"
                android:layout_marginVertical="20dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/YellowDark"
                    android:textColorHint="@color/White"
                    android:textColor="@color/White"
                    android:hint="@string/review_hint"
                    android:padding="20dp"
                    android:id="@+id/review_text_et"/>
                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:isIndicator="true" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post"
                    android:padding="1dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_selector_yellow_dark"
                    android:layout_gravity="center"
                    android:id="@+id/submit_review_bt"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/recycler_barber_reviews"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/image_btn_phone"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_baseline_phone_24"
        app:pressedTranslationZ="80dp"
        app:layout_anchor="@id/ancor_to_me"
        android:layout_marginEnd="40dp"
        app:layout_anchorGravity="bottom|end"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/image_btn_navigation"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_baseline_navigation_24"
        app:pressedTranslationZ="80dp"
        app:layout_anchor="@id/ancor_to_me"
        android:layout_marginEnd="130dp"
        app:layout_anchorGravity="bottom|end"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/image_btn_message"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_baseline_message_24"
        app:pressedTranslationZ="80dp"
        app:layout_anchor="@id/ancor_to_me"
        android:layout_marginEnd="220dp"
        app:layout_anchorGravity="bottom|end"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/image_btn_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="310dp"
        android:src="@drawable/ic_baseline_home_24"
        app:layout_anchor="@id/ancor_to_me"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="80dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
